force-app/main/default/objects/rs_LIFO_Cost_Record__c/rs_LIFO_Cost_Record__c.object-meta.xml
<CustomObject>
    <description>Record is created to match the standard RS FIFO Cost Record, and subsequently, consumed in the reverse order of FIFO through automations created as per JIRA RCP-323</description>
    <label>LIFO Cost Record</label>
    <nameField>
        <displayFormat>LIFO-{0000000000}</displayFormat>
        <label>LIFO Cost Record Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>LIFO Cost Records</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>