force-app/main/default/objects/rs_LIFO_Cost_Record__c/fields/icitemlifoseq_actucstmtl__c.field-meta.xml
<CustomField>
    <fullName>icitemlifoseq_actucstmtl__c</fullName>
    <description>This is the actual cost when the record was created

On a purchase receipt, this is the PO Price (adjusted by the Purchasing to Inventory Unit of Measure conversion factor). (DD)</description>
    <inlineHelpText>This is the actual cost when the record was created

On a purchase receipt, this is the PO Price (adjusted by the Purchasing to Inventory Unit of Measure conversion factor). (DD)</inlineHelpText>
    <label>Avg Unit Cost, Material</label>
    <precision>16</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>