force-app/main/default/objects/rs_LIFO_Cost_Record__c/fields/icitemlifoseq_div__c.field-meta.xml
<CustomField>
    <fullName>icitemlifoseq_div__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to Division Matser</description>
    <label>Division Master</label>
    <referenceTo>rstk__sydiv__c</referenceTo>
    <relationshipLabel>LIFO Cost Records</relationshipLabel>
    <relationshipName>LIFO_Cost_Records</relationshipName>
    <type>Lookup</type>
</CustomField>