force-app/main/default/objects/rs_LIFO_Cost_Record__c/fields/icitemlifoseq_item__c.field-meta.xml
<CustomField>
    <fullName>icitemlifoseq_item__c</fullName>
    <description>Inventory Item Master</description>
    <label>Inventory Item Master</label>
    <referenceTo>rstk__icitem__c</referenceTo>
    <relationshipLabel>LIFO Cost Records</relationshipLabel>
    <relationshipName>icitemlifoseqs</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>