force-app/main/default/objects/rs_LIFO_Cost_Record__c/fields/icitemlifoseq_lstadjdatetime__c.field-meta.xml
<CustomField>
    <fullName>icitemlifoseq_lstadjdatetime__c</fullName>
    <description>This is the Date/Time associated with the last adjustment of this record</description>
    <inlineHelpText>This is the Date/Time associated with the last adjustment of this record</inlineHelpText>
    <label>Last Adjustment Date</label>
    <type>DateTime</type>
</CustomField>