force-app/main/default/objects/rs_LIFO_Cost_Record__c/fields/icitemlifoseq_origtxnqty__c.field-meta.xml
<CustomField>
    <fullName>icitemlifoseq_origtxnqty__c</fullName>
    <description>This is the transaction quantity associated with the original creation of this FIFO record.
The ICITEMFIFOSEQ_QTY can be decremented by a work order issue (for example) – but this ICITEMFIFOSEQ_ORIGTXNQTY will never be altered. (DD)</description>
    <inlineHelpText>This is the transaction quantity associated with the original creation of this FIFO record.</inlineHelpText>
    <label>Orig Txn Qty</label>
    <precision>16</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>