force-app/main/default/objects/rs_LIFO_Cost_Record__c/fields/icitemlifoseq_proj__c.field-meta.xml
<CustomField>
    <fullName>icitemlifoseq_proj__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to home project</description>
    <label>Project Master</label>
    <referenceTo>rstk__pjproj__c</referenceTo>
    <relationshipLabel>LIFO Cost Records</relationshipLabel>
    <relationshipName>LIFO_Cost_Records</relationshipName>
    <type>Lookup</type>
</CustomField>