force-app/main/default/objects/rs_LIFO_Cost_Record__c/fields/icitemlifoseq_rcptno__c.field-meta.xml
<CustomField>
    <fullName>icitemlifoseq_rcptno__c</fullName>
    <description>If this record was created by a purchase receipt, this is the receipt number associated with the creation of this FIFO record. (DD)</description>
    <label>Receipt No</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>