force-app/main/default/objects/rs_LIFO_Cost_Record__c/fields/icitemlifoseq_seq__c.field-meta.xml
<CustomField>
    <fullName>icitemlifoseq_seq__c</fullName>
    <description>FIFO Sequence Number</description>
    <label>Sequence Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>