force-app/main/default/objects/rs_LIFO_Cost_Record__c/fields/icitemlifoseq_txnid__c.field-meta.xml
<CustomField>
    <fullName>icitemlifoseq_txnid__c</fullName>
    <description>This is the transaction ID created when the record was created

Some of the values are as follows:

‘PORCPT’ – if created by a purchase receipt

‘INVLOCADD’ – if created by an inventory location addition

‘INVLOCADJ’ – if created by an adjustment (up)

‘WOISSR’ – if created by a work order issue reversal

‘SOISSR’ – if created by a sales order pick reversal. (DD)</description>
    <label>Txn ID</label>
    <length>15</length>
    <type>Text</type>
</CustomField>