force-app/main/default/objects/rs_LIFO_Cost_Record__c/fields/icitemlifoseq_usrno__c.field-meta.xml
<CustomField>
    <fullName>icitemlifoseq_usrno__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is the manufacturing user that created the record.</description>
    <inlineHelpText>This is the manufacturing user that created the record.</inlineHelpText>
    <label>Manufacturing Users</label>
    <referenceTo>rstk__syusr__c</referenceTo>
    <relationshipLabel>LIFO Cost Records</relationshipLabel>
    <relationshipName>LIFO_Cost_Records</relationshipName>
    <type>Lookup</type>
</CustomField>