force-app/main/default/objects/rs_LIFO_Cost_Record__c/fields/iicitemlifoseq_icdreq__c.field-meta.xml
<CustomField>
    <fullName>iicitemlifoseq_icdreq__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>When applicable, this field carries a reference to the Disassembly Derived Component who’s receipt created this FIFO detail.</description>
    <inlineHelpText>When applicable, this field carries a reference to the Disassembly Derived Component who’s receipt created this FIFO detail.</inlineHelpText>
    <label>Disassembly Derived Component</label>
    <referenceTo>rstk__icdreq__c</referenceTo>
    <relationshipLabel>LIFO Cost Records</relationshipLabel>
    <relationshipName>LIFO_Cost_Records</relationshipName>
    <type>Lookup</type>
</CustomField>