force-app/main/default/objects/rs_LIFO_Cost_Record__c/fields/Last_LIFO_Processing_Record__c.field-meta.xml
<CustomField>
    <fullName>Last_LIFO_Processing_Record__c</fullName>
    <label>Last LIFO Processing Record</label>
    <length>15</length>
    <type>Text</type>
</CustomField>