force-app/main/default/objects/rs_LIFO_Cost_Record__c/fields/LIFO_Header__c.field-meta.xml
<CustomField>
    <fullName>LIFO_Header__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>LIFO Header</label>
    <referenceTo>rs_LIFO_Header__c</referenceTo>
    <relationshipLabel>LIFO Cost Records</relationshipLabel>
    <relationshipName>LIFO_Cost_Records</relationshipName>
    <type>Lookup</type>
</CustomField>