force-app/main/default/objects/rs_LIFO_Cost_Record__c/fields/Original_FIFO_ID__c.field-meta.xml
<CustomField>
    <fullName>Original_FIFO_ID__c</fullName>
    <label>Original FIFO ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>