force-app/main/default/objects/rs_LIFO_Cost_Record__c/fields/searchindex__c.field-meta.xml
<CustomField>
    <fullName>searchindex__c</fullName>
    <label>Search Index</label>
    <length>255</length>
    <type>Text</type>
</CustomField>