force-app/main/default/objects/rs_LIFO_Cost_Record__c/validationRules/Negative_Value_not_permitted.validationRule-meta.xml
<ValidationRule>
    <fullName>Negative_Value_not_permitted</fullName>
    <active>true</active>
    <errorConditionFormula>icitemlifoseq_qty__c &lt; 0</errorConditionFormula>
    <errorMessage>Qty on LIFO Layer cannot be less than zero.</errorMessage>
</ValidationRule>