force-app/main/default/objects/rs_LIFO_Cost_Record__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>icitemlifoseq_item__c</columns>
    <columns>icitemlifoseq_seq__c</columns>
    <columns>icitemlifoseq_origtxnqty__c</columns>
    <columns>icitemlifoseq_qty__c</columns>
    <columns>icitemlifoseq_actucstmtl__c</columns>
    <columns>Last_LIFO_Processing_Record__c</columns>
    <columns>icitemlifoseq_txnid__c</columns>
    <columns>icitemlifoseq_rcptno__c</columns>
    <columns>icitemlifoseq_lstadjdatetime__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <columns>icitemlifoseq_usrno__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>